--- a/app/src/main/res/layout/activity_practical_test02v1_main.xml
+++ b/app/src/main/res/layout/activity_practical_test02v1_main.xml
@@ -121,7 +121,7 @@
     </GridLayout>
 
     <TextView
-        android:id="@+id/anagrams_text_view"
+        android:id="@+id/autocomplete_text_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
